trunk/Archive2/00/26844bd5c35285/output
main.cpp: In function 'int main()':
main.cpp:24:5: error: static assertion failed: 
     static_assert(decltype(fails_to_compile(test())){}, "");
     ^
main.cpp: In instantiation of 'void test::foo(It) [with It = const char*]':
main.cpp:18:14:   required from here
main.cpp:13:39: error: conversion from 'const char*' to non-scalar type 'std::reverse_iterator<const char*>' requested
         std::reverse_iterator<It> r = i;
                                       ^
